# new_minesweeper_client

./: CMakeLists.txt  README.md
src/: main.cpp
src/client/: ai.cpp  ai.h  client.cpp  client.h
